@@ -8,10 +8,9 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 TEST_TOOL_NAME = @TESTNAMES@
 
-ADDITIONAL_OBJCFLAGS += @TESTFLAGS@ -Wall
-
 ifeq ($(gcov),yes)
 ADDITIONAL_OBJCFLAGS += -ftest-coverage -fprofile-arcs
+ADDITIONAL_OBJCCFLAGS += -ftest-coverage -fprofile-arcs
 ADDITIONAL_LDFLAGS += -ftest-coverage -fprofile-arcs
 ADDITIONAL_TOOL_LIBS+=-lgcov
 endif
